--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "template-react-component-library",
-  "version": "0.0.1",
+  "name": "template-react-component",
+  "version": "0.0.3",
   "description": "A react component library",
   "scripts": {
     "rollup": "rollup -c"
@@ -12,7 +12,9 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/react": "^18.0.28",
+    "jest-environment-jsdom": "^29.4.3",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^3.17.2",
     "rollup-plugin-dts": "^5.2.0",
     "tslib": "^2.5.0",
@@ -23,5 +25,15 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index/d/ts"
+  "types": "dist/index/d/ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/bathe-shekhar"
+  },
+  "dependencies": {
+    "@rollup/plugin-terser": "^0.4.0",
+    "react-dom": "^18.2.0"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
+  }
 }
